--- a/client/src/index.css
+++ b/client/src/index.css
@@ -553,14 +553,6 @@ video {
 [hidden] {
   display: none;
 }
-
-*, ::before, ::after {
-	--tw-border-opacity: 1;
-	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
-	--tw-ring-offset-shadow: 0 0 #0000;
-	--tw-ring-shadow: 0 0 #0000;
-	--tw-shadow: 0 0 #0000;
-}
 .relative {
 	position: relative;
 }
@@ -574,23 +566,8 @@ video {
 .mb-10 {
 	margin-bottom: 2.5rem;
 }
-.mb-4 {
-	margin-bottom: 1rem;
-}
-.mb-2 {
-	margin-bottom: 0.5rem;
-}
-.mb-6 {
-	margin-bottom: 1.5rem;
-}
-.mb-3 {
-	margin-bottom: 0.75rem;
-}
 .block {
 	display: block;
-}
-.inline-block {
-	display: inline-block;
 }
 .flex {
 	display: flex;
@@ -613,53 +590,24 @@ video {
 .w-full {
 	width: 100%;
 }
-.appearance-none {
-	-webkit-appearance: none;
-	        appearance: none;
-}
 .flex-col {
 	flex-direction: column;
 }
-.items-center {
-	align-items: center;
+.flex-wrap {
+	flex-wrap: wrap;
 }
-.justify-between {
-	justify-content: space-between;
+.justify-center {
+	justify-content: center;
 }
 .rounded {
 	border-radius: 0.25rem;
-}
-.border {
-	border-width: 1px;
 }
 .bg-blue-400 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(96, 165, 250, var(--tw-bg-opacity));
 }
-.bg-green-400 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(52, 211, 153, var(--tw-bg-opacity));
-}
-.px-8 {
-	padding-left: 2rem;
-	padding-right: 2rem;
-}
-.py-2 {
-	padding-top: 0.5rem;
-	padding-bottom: 0.5rem;
-}
-.px-3 {
-	padding-left: 0.75rem;
-	padding-right: 0.75rem;
-}
-.pt-6 {
-	padding-top: 1.5rem;
-}
-.pb-8 {
-	padding-bottom: 2rem;
-}
-.align-baseline {
-	vertical-align: baseline;
+.pt-4 {
+	padding-top: 1rem;
 }
 .font-sans {
 	font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -668,29 +616,10 @@ video {
 	font-size: 3rem;
 	line-height: 1;
 }
-.text-sm {
-	font-size: 0.875rem;
-	line-height: 1.25rem;
-}
-.text-xs {
-	font-size: 0.75rem;
-	line-height: 1rem;
-}
 .font-bold {
 	font-weight: 700;
-}
-.italic {
-	font-style: italic;
 }
 .text-white {
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
-}
-.shadow-md {
-	--tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-.shadow {
-	--tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
