--- a/client/src/index.css
+++ b/client/src/index.css
@@ -349,7 +349,7 @@ ul {
  */
 
 html {
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* 1 */
+  font-family: replica, Segoe UI, Helvetica, Arial; /* 1 */
   line-height: 1.5; /* 2 */
 }
 
@@ -428,7 +428,7 @@ textarea {
 input::placeholder,
 textarea::placeholder {
   opacity: 1;
-  color: #9ca3af;
+  color: #a1a1aa;
 }
 
 button,
@@ -569,6 +569,9 @@ video {
 .block {
 	display: block;
 }
+.inline-block {
+	display: inline-block;
+}
 .flex {
 	display: flex;
 }
@@ -593,24 +596,29 @@ video {
 .flex-col {
 	flex-direction: column;
 }
-.flex-wrap {
-	flex-wrap: wrap;
+.items-center {
+	align-items: center;
 }
-.justify-center {
-	justify-content: center;
+.space-y-6 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-y-reverse: 0;
+	margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 .rounded {
 	border-radius: 0.25rem;
 }
-.bg-blue-400 {
+.bg-green {
 	--tw-bg-opacity: 1;
-	background-color: rgba(96, 165, 250, var(--tw-bg-opacity));
+	background-color: rgba(0, 115, 59, var(--tw-bg-opacity));
 }
-.pt-4 {
-	padding-top: 1rem;
+.p-4 {
+	padding: 1rem;
+}
+.pt-8 {
+	padding-top: 2rem;
 }
 .font-sans {
-	font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+	font-family: replica, Segoe UI, Helvetica, Arial;
 }
 .text-5xl {
 	font-size: 3rem;
@@ -622,4 +630,24 @@ video {
 .text-white {
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+.text-beige {
+	--tw-text-opacity: 1;
+	color: rgba(251, 246, 237, var(--tw-text-opacity));
+}
+@media (min-width: 640px) {
+
+	.sm\:max-w-md {
+		max-width: 28rem;
+	}
+
+	.sm\:p-8 {
+		padding: 2rem;
+	}
+}
+@media (min-width: 768px) {
+
+	.md\:p-12 {
+		padding: 3rem;
+	}
 }
