--- a/client/src/index.css
+++ b/client/src/index.css
@@ -560,11 +560,11 @@ video {
 	margin-top: auto;
 	margin-bottom: auto;
 }
-.ml-20 {
-	margin-left: 5rem;
-}
 .mb-10 {
 	margin-bottom: 2.5rem;
+}
+.ml-20 {
+	margin-left: 5rem;
 }
 .mt-8 {
 	margin-top: 2rem;
@@ -593,11 +593,14 @@ video {
 .min-h-screen {
 	min-height: 100vh;
 }
-.w-3\/4 {
-	width: 75%;
+.w-1\/2 {
+	width: 50%;
 }
 .w-full {
 	width: 100%;
+}
+.w-3\/4 {
+	width: 75%;
 }
 .flex-col {
 	flex-direction: column;
@@ -605,20 +608,49 @@ video {
 .items-center {
 	align-items: center;
 }
+.justify-center {
+	justify-content: center;
+}
+.space-x-2 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-x-reverse: 0;
+	margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+	margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
 .space-y-6 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-y-reverse: 0;
 	margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
+.rounded-lg {
+	border-radius: 0.5rem;
+}
 .rounded {
 	border-radius: 0.25rem;
+}
+.bg-white {
+	--tw-bg-opacity: 1;
+	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+}
+.bg-beige-900 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(68, 65, 59, var(--tw-bg-opacity));
 }
 .bg-green {
 	--tw-bg-opacity: 1;
 	background-color: rgba(0, 115, 59, var(--tw-bg-opacity));
 }
+.p-2 {
+	padding: 0.5rem;
+}
 .p-4 {
 	padding: 1rem;
+}
+.px-4 {
+	padding-left: 1rem;
+	padding-right: 1rem;
+}
+.pt-20 {
+	padding-top: 5rem;
 }
 .pt-8 {
 	padding-top: 2rem;
@@ -632,6 +664,16 @@ video {
 .font-serif {
 	font-family: domaine, Georgia;
 }
+.text-2xl {
+	font-size: 1.5rem;
+	line-height: 2rem;
+}
+.text-md {
+	font-size: 1rem;
+}
+.text-sm {
+	font-size: 0.867rem;
+}
 .text-5xl {
 	font-size: 3rem;
 	line-height: 1;
@@ -643,8 +685,19 @@ video {
 .font-bold {
 	font-weight: 700;
 }
+.font-light {
+	font-weight: 300;
+}
 .leading-normal {
 	line-height: 1.3;
+}
+.text-beige-900 {
+	--tw-text-opacity: 1;
+	color: rgba(68, 65, 59, var(--tw-text-opacity));
+}
+.text-green-300 {
+	--tw-text-opacity: 1;
+	color: rgba(62, 227, 133, var(--tw-text-opacity));
 }
 .text-white {
 	--tw-text-opacity: 1;
