--- a/client/src/index.css
+++ b/client/src/index.css
@@ -711,6 +711,10 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(0, 0, 0, var(--tw-text-opacity));
 }
+.text-green {
+	--tw-text-opacity: 1;
+	color: rgba(0, 115, 59, var(--tw-text-opacity));
+}
 @media (min-width: 640px) {
 
 	.sm\:max-w-md {
